--- a/BarberShop/Views/Agendamento/HistoricoAgendamentos.cshtml
+++ b/BarberShop/Views/Agendamento/HistoricoAgendamentos.cshtml
@@ -12,7 +12,8 @@
                     <th>Barbeiro</th>
                     <th>Serviços</th>
                     <th>Valor Total</th>
-                    <th>Status</th>
+                    <th>Status do Agendamento</th>
+                    <th>Status do Pagamento</th>
                     <th>Forma de Pagamento</th>
                 </tr>
             </thead>
@@ -58,6 +59,32 @@
                             }
                         </td>
                         <td class="align-middle text-center">
+                            @if (agendamento.StatusPagamento == BarberShop.Domain.Entities.StatusPagamento.Pendente)
+                            {
+                                <i class="fas fa-clock text-warning" title="Pendente"></i>
+                            }
+                            else if (agendamento.StatusPagamento == BarberShop.Domain.Entities.StatusPagamento.Aprovado)
+                            {
+                                <i class="fas fa-check-circle text-success" title="Aprovado"></i>
+                            }
+                            else if (agendamento.StatusPagamento == BarberShop.Domain.Entities.StatusPagamento.Recusado)
+                            {
+                                <i class="fas fa-times-circle text-danger" title="Recusado"></i>
+                            }
+                            else if (agendamento.StatusPagamento == BarberShop.Domain.Entities.StatusPagamento.Cancelado)
+                            {
+                                <i class="fas fa-ban text-danger" title="Cancelado"></i>
+                            }
+                            else if (agendamento.StatusPagamento == BarberShop.Domain.Entities.StatusPagamento.Reembolsado)
+                            {
+                                <i class="fas fa-undo text-info" title="Reembolsado"></i>
+                            }
+                            else if (agendamento.StatusPagamento == BarberShop.Domain.Entities.StatusPagamento.EmProcessamento)
+                            {
+                                <i class="fas fa-spinner text-primary" title="Em Processamento"></i>
+                            }
+                        </td>
+                        <td class="align-middle text-center">
                             @if (agendamento.FormaPagamento == "creditCard")
                             {
                                 <i class="fas fa-credit-card text-primary"></i>
@@ -69,6 +96,10 @@
                             else if (agendamento.FormaPagamento == "transfer")
                             {
                                 <i class="fas fa-university text-info"></i>
+                            }
+                            else if (agendamento.FormaPagamento == "naLoja")
+                            {
+                                <i class="fas fa-store text-warning"></i>
                             }
                             else
                             {
@@ -83,62 +114,7 @@
 
     <!-- Cards para dispositivos móveis -->
     <div class="d-md-none">
-        <!-- Primeiro Card com Margin-Top Adicional -->
-        <div class="card bg-dark text-light mb-3" style="margin-top: 3800px;">
-            <div class="card-body">
-                <h5 class="card-title">@Model.First().DataHora.ToString("dd/MM/yyyy HH:mm")</h5>
-                <p class="card-text"><strong>Barbeiro:</strong> @Model.First().Barbeiro.Nome</p>
-                <p class="card-text"><strong>Serviços:</strong></p>
-                <ul>
-                    @foreach (var servico in Model.First().AgendamentoServicos)
-                    {
-                        <li>@servico.Servico.Nome - @servico.Servico.Preco.ToString("C")</li>
-                    }
-                </ul>
-                <p class="card-text"><strong>Valor Total:</strong> @Model.First().AgendamentoServicos.Sum(s => s.Servico.Preco).ToString("C")</p>
-                <p class="card-text">
-                    <strong>Forma de Pagamento:</strong>
-                    @if (Model.First().FormaPagamento == "creditCard")
-                    {
-                        <i class="fas fa-credit-card text-primary"></i>
-                    }
-                    else if (Model.First().FormaPagamento == "pix")
-                    {
-                        <i class="fas fa-qrcode text-success"></i>
-                    }
-                    else if (Model.First().FormaPagamento == "transfer")
-                    {
-                        <i class="fas fa-university text-info"></i>
-                    }
-                    else
-                    {
-                        @Model.First().FormaPagamento
-                    }
-                </p>
-                <p class="card-text">
-                    <strong>Status:</strong>
-                    @if (Model.First().Status == BarberShop.Domain.Entities.StatusAgendamento.Pendente)
-                    {
-                        <span><i class="fas fa-clock text-warning"></i> Pendente</span>
-                    }
-                    else if (Model.First().Status == BarberShop.Domain.Entities.StatusAgendamento.Confirmado)
-                    {
-                        <span><i class="fas fa-check text-success"></i> Confirmado</span>
-                    }
-                    else if (Model.First().Status == BarberShop.Domain.Entities.StatusAgendamento.Cancelado)
-                    {
-                        <span><i class="fas fa-times text-danger"></i> Cancelado</span>
-                    }
-                    else if (Model.First().Status == BarberShop.Domain.Entities.StatusAgendamento.Concluido)
-                    {
-                        <span><i class="fas fa-check-circle text-info"></i> Concluído</span>
-                    }
-                </p>
-            </div>
-        </div>
-
-        <!-- Outros Cards -->
-        @foreach (var agendamento in Model.Skip(1))
+        @foreach (var agendamento in Model)
         {
             <div class="card bg-dark text-light mb-3">
                 <div class="card-body">
@@ -166,13 +142,17 @@
                         {
                             <i class="fas fa-university text-info"></i>
                         }
+                        else if (agendamento.FormaPagamento == "naLoja")
+                        {
+                            <i class="fas fa-store text-warning"></i>
+                        }
                         else
                         {
                             @agendamento.FormaPagamento
                         }
                     </p>
                     <p class="card-text">
-                        <strong>Status:</strong>
+                        <strong>Status do Agendamento:</strong>
                         @if (agendamento.Status == BarberShop.Domain.Entities.StatusAgendamento.Pendente)
                         {
                             <span><i class="fas fa-clock text-warning"></i> Pendente</span>
@@ -190,6 +170,33 @@
                             <span><i class="fas fa-check-circle text-info"></i> Concluído</span>
                         }
                     </p>
+                    <p class="card-text">
+                        <strong>Status do Pagamento:</strong>
+                        @if (agendamento.StatusPagamento == BarberShop.Domain.Entities.StatusPagamento.Pendente)
+                        {
+                            <i class="fas fa-clock text-warning"></i> 
+                        }
+                        else if (agendamento.StatusPagamento == BarberShop.Domain.Entities.StatusPagamento.Aprovado)
+                        {
+                            <i class="fas fa-check-circle text-success"></i> 
+                        }
+                        else if (agendamento.StatusPagamento == BarberShop.Domain.Entities.StatusPagamento.Recusado)
+                        {
+                            <i class="fas fa-times-circle text-danger"></i>
+                        }
+                        else if (agendamento.StatusPagamento == BarberShop.Domain.Entities.StatusPagamento.Cancelado)
+                        {
+                            <i class="fas fa-ban text-danger"></i>
+                        }
+                        else if (agendamento.StatusPagamento == BarberShop.Domain.Entities.StatusPagamento.Reembolsado)
+                        {
+                            <i class="fas fa-undo text-info"></i>
+                        }
+                        else if (agendamento.StatusPagamento == BarberShop.Domain.Entities.StatusPagamento.EmProcessamento)
+                        {
+                            <i class="fas fa-spinner text-primary"></i>
+                        }
+                    </p>
                 </div>
             </div>
         }
@@ -200,27 +207,19 @@
 <div class="mt-4">
     <h5 class="text-light">Legenda:</h5>
     <ul class="list-inline">
-        <li class="list-inline-item">
-            <i class="fas fa-clock text-warning"></i> Pendente
-        </li>
-        <li class="list-inline-item">
-            <i class="fas fa-check text-success"></i> Confirmado
-        </li>
-        <li class="list-inline-item">
-            <i class="fas fa-times text-danger"></i> Cancelado
-        </li>
-        <li class="list-inline-item">
-            <i class="fas fa-check-circle text-info"></i> Concluído
-        </li>
-        <li class="list-inline-item">
-            <i class="fas fa-credit-card text-primary"></i> Cartão de Crédito
-        </li>
-        <li class="list-inline-item">
-            <i class="fas fa-qrcode text-success"></i> PIX
-        </li>
-        <li class="list-inline-item">
-            <i class="fas fa-university text-info"></i> Transferência Bancária
-        </li>
+        <li class="list-inline-item"><i class="fas fa-clock text-warning"></i> Pendente</li>
+        <li class="list-inline-item"><i class="fas fa-check text-success"></i> Confirmado</li>
+        <li class="list-inline-item"><i class="fas fa-times text-danger"></i> Cancelado</li>
+        <li class="list-inline-item"><i class="fas fa-check-circle text-info"></i> Concluído</li>
+        <li class="list-inline-item"><i class="fas fa-credit-card text-primary"></i> Cartão de Crédito</li>
+        <li class="list-inline-item"><i class="fas fa-qrcode text-success"></i> PIX</li>
+        <li class="list-inline-item"><i class="fas fa-university text-info"></i> Transferência Bancária</li>
+        <li class="list-inline-item"><i class="fas fa-store text-warning"></i> Na Loja</li>
+        <li class="list-inline-item"><i class="fas fa-check-circle text-success"></i> Aprovado</li>
+        <li class="list-inline-item"><i class="fas fa-times-circle text-danger"></i> Recusado</li>
+        <li class="list-inline-item"><i class="fas fa-ban text-danger"></i> Cancelado</li>
+        <li class="list-inline-item"><i class="fas fa-undo text-info"></i> Reembolsado</li>
+        <li class="list-inline-item"><i class="fas fa-spinner text-primary"></i> Em Processamento</li>
     </ul>
 </div>
 
