--- a/BarberShop/Views/Agendamento/HistoricoAgendamentos.cshtml
+++ b/BarberShop/Views/Agendamento/HistoricoAgendamentos.cshtml
@@ -145,6 +145,10 @@
                         else if (agendamento.FormaPagamento == "naLoja")
                         {
                             <i class="fas fa-store text-warning"></i>
+                        } 
+                        else if (agendamento.FormaPagamento == "store")
+                        {
+                            <i class="fas fa-store text-warning"></i>
                         }
                         else
                         {
