Ajustes js, e historico, e pagamento online

--- a/BarberShop/Views/Agendamento/HistoricoAgendamentos.cshtml
+++ b/BarberShop/Views/Agendamento/HistoricoAgendamentos.cshtml
@@ -101,6 +101,10 @@
                             {
                                 <i class="fas fa-store text-warning"></i>
                             }
+                            else if (agendamento.FormaPagamento == "store")
+                            {
+                                <i class="fas fa-store text-warning"></i>
+                            }
                             else
                             {
                                 @agendamento.FormaPagamento
