--- a/BarberShop/Views/Shared/_Layout.cshtml
+++ b/BarberShop/Views/Shared/_Layout.cshtml
@@ -38,6 +38,11 @@
 
     <div id="toastContainer" style="position: fixed; top: 20px; right: 20px; z-index: 9999;"></div>
 
+    <!-- Botão de WhatsApp -->
+    <a href="https://wa.me/5511963516246?text=Ol%C3%A1%2C%20gostaria%20de%20tirar%20uma%20duvida.." target="_blank" class="whatsapp-button" title="Fale conosco no WhatsApp">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+
     <!-- jQuery -->
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
