--- a/BarberShop/Views/Cliente/SolicitarServico.cshtml
+++ b/BarberShop/Views/Cliente/SolicitarServico.cshtml
@@ -16,9 +16,10 @@
                     {
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                             <span>
-                                <strong>@servico.Nome</strong> - R$ @servico.Preco <br>
+                                <strong>@servico.Nome</strong> - R$ @servico.Preco.ToString("F2") <br>
                                 <small><em>Duração: @servico.Duracao minutos</em></small>
                             </span>
+
                             <button id="servico-@servico.ServicoId" class="btn btn-success btn-sm"
                                     onclick="adicionarServico('@servico.ServicoId', '@servico.Nome', '@servico.Preco', '@servico.Duracao', this)">
                                 Adicionar
