--- a/BarberShop/Views/Login/Login.cshtml
+++ b/BarberShop/Views/Login/Login.cshtml
@@ -4,7 +4,8 @@
 
 <div class="container mt-5" id="loginPage">
     <div class="row justify-content-center">
-        <div class="col-md-6">
+        <div class="col-md-8 col-lg-6">
+            <!-- Aumentei a largura para col-md-8 e col-lg-6 -->
             <div class="card bg-dark text-light p-4" id="loginCard">
                 <h3 class="text-center text-danger mb-4" id="loginTitle">Bem-vindo à Barbearia CG DREAMS</h3>
                 <p class="text-center" id="loginInstruction">Por favor, insira seu telefone ou e-mail:</p>
