--- a/BarberShop/Views/Shared/_AdminLayout.cshtml
+++ b/BarberShop/Views/Shared/_AdminLayout.cshtml
@@ -38,6 +38,9 @@
                 </a>
                 <a href="@Url.Action("Index", "Servico")" class="list-group-item list-group-item-action bg-dark text-white my-2">
                     <i class="fas fa-cut"></i> Serviços
+                </a> 
+                <a href="@Url.Action("Index", "Pagamento")" class="list-group-item list-group-item-action bg-dark text-white my-2">
+                    <i class="fas fa-credit-card"></i> Pagamentos
                 </a>
                 <a href="#" onclick="event.preventDefault(); document.getElementById('logout-form').submit();" class="list-group-item list-group-item-action bg-dark text-white my-2">
                     <i class="fas fa-sign-out-alt"></i> Logout
